# ee-fbsd

./: .clang-tidy  .gitignore  Cargo.toml  Makefile  README.MD  build.rs  common.h  compile_commands.json  config.h  configure.sh  create.make  curse_adapter.c  curse_adapter.h  curse_impl.c  curse_impl.h  curse_keys.h  curse_term.c  curse_term.h  curse_types.h  ee.c  ee.rs  error.c  error.h  errors  helltop.txt  make.default  make.local  meson.build  meson_options.txt  mktidywarnings  new_curse.c  new_curse.h  rust-toolchain.toml  sac.txt
config/: colors.json
src/: buffer.rs  config.rs  editor.rs  error.rs  ffi.rs  input.rs  lib.rs  main.rs  menu.rs  settings.rs  text.rs  window.rs
src/buffer/: cursor.rs  mod.rs  selection.rs  tab.rs
src/config/: mod.rs
src/editor/: buffer.rs  cursor.rs  mod.rs  tab.rs
src/lsp/: client.rs  config.rs  mod.rs
src/menu/: mod.rs
src/syntax/: mod.rs
src/text/: highlighting.rs  lsp.rs  mod.rs
src/ui/: dialog.rs  highlight.rs  menu.rs  mod.rs  theme.rs
