[package]
name = "ee-fbsd"
version = "0.1.0"
edition = "2021"
authors = ["Hugh Mahon", "Rust port contributors"]
description = "Easy Editor (ee) - A simple text editor"

[dependencies]
# Terminal UI
tui = "0.19"
crossterm = "0.27"

# Error handling and utilities
thiserror = "1.0"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }

# Syntax highlighting
syntect = "5.0"
tree-sitter = "0.20"

# LSP support
lsp-types = "0.94"
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
tower = { version = "0.4", features = ["util"] }

copypasta = "0.8"  # Add clipboard support

[lib]
name = "ee_fbsd"
path = "src/lib.rs"

[[bin]]
name = "ee"
path = "src/main.rs"
