[package]
name = "ee-fbsd"
version = "0.1.0"
edition = "2021"
authors = ["Hugh Mahon", "Rust port contributors"]
description = "Easy Editor (ee) - A simple text editor"

[dependencies]
# Core dependencies
crossterm = "0.25"
tui = { version = "0.19", default-features = false, features = ["crossterm"] }

# Editor features
copypasta = "0.8"
directories = "5.0"
regex = "1.9"
syntect = "5.0"

# LSP support
lsp-types = "0.94"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-lsp = "0.20"

# Utilities
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

dirs = "5.0"

[lib]
name = "ee_fbsd"
path = "src/lib.rs"

[[bin]]
name = "ee"
path = "src/main.rs"
