[package]
name = "ee"
version = "1.5.2"
edition = "2021"
description = "Easy Editor - A simple terminal-based text editor"
authors = ["Hugh Mahon"]

[dependencies]
libc = "0.2"
crossterm = "0.26"
ncurses = "5.101"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.0"
thiserror = "1.0"
tower-lsp = "0.19"
tokio = { version = "1.28", features = ["full"] }
tui = { version = "0.19", default-features = false, features = ["crossterm"] }
gettext-rs = "0.7"
users = "0.11"
dirs = "5.0"

[features]
full_ui = []
default = ["full_ui"]
